@startuml class_diagram
!theme plain
title Wiki Publisher - Class Diagram

skinparam classBackgroundColor #E8F4F8
skinparam classBorderColor #0066CC
skinparam arrowColor #333333

class Publisher {
  {static} -DEFAULT_PARSER_CLASS: String
  -config: Configuration
  -parser: Parser
  +Publisher(config: Configuration)
  +publish(): void
  #getParser(): Parser
  #publish(mapper, pages, client): boolean
  {static} -createParser(config: Configuration): Parser
  {static} -loadClass(className: String): Class<?>
  -dump(page: Page, depth: int): void
}

class Configuration {
  -url: String
  -username: String
  -password: String
  -debug: boolean
  -parserClass: String
  -mappers: Set<Mapper>
}

class "Configuration.Mapper" as Mapper {
  -spaceKey: String
  -root: String
  -path: String
  -deleteOrphans: boolean
}

class ConfluenceClient {
  -config: Configuration
  -clientV1: ApiClient
  -clientV2: ApiClient
  -attachmentsApi: ContentAttachmentsApi
  -propertiesApi: ContentPropertiesApi
  -spaceApi: SpaceApi
  -pageApi: PageApi
  -parser: Parser
  -transformer: Transformer
  +ConfluenceClient(config, parser, transformer)
  +updatePages(mapper: Mapper, pages: List<Page>): void
  #createOrUpdatePage(page, parentId, spaceId, list): PageBulk
  -getOrCreatePage(...): PageBulk
  -updateBody(...): void
  -createOrUpdateAttachment(...): void
  -syncPageStructure(root, touched, delete): void
  {static} -findOrphans(descendants, touched): List<DescendantsResponse>
}

interface Parser {
  +init(config: Configuration): void
  +resolvePages(root: Path): List<Page>
  +loadContent(page: Page): Element
}
note right of Parser
  Implementations need a public
  no-argument constructor. Publisher
  resolves the class named by
  Configuration.parserClass and calls
  init(config) once before any use.
end note

class AntoraParser {
  -config: Configuration
  +init(config: Configuration): void
  +resolvePages(root: Path): List<Page>
  +loadContent(page: Page): Element
  -load(file: Path): Document
}

interface Transformer {
  +transform(page: Page, content: Element): Result
}

class ConfluenceTransformer {
  -resolver: LinkResolver
  +ConfluenceTransformer()
  +ConfluenceTransformer(resolver: LinkResolver)
  +transform(page: Page, content: Element): Result
}

class LinkResolver {
  {static} +empty(): LinkResolver
  {static} +of(sources: Collection<MapperPages>): LinkResolver
  +resolve(currentPage: Path, href: String): Optional<Target>
}

class "LinkResolver.MapperPages" as MapperPages <<record>> {
  +spaceKey: String
  +path: Path
  +rootTitle: String
  +pages: List<Page>
}

class "LinkResolver.Target" as Target <<record>> {
  +kind: Kind
  +title: String
  +spaceKey: String
  +foreign: boolean
  +anchor: String
  +file: Path
}

enum "LinkResolver.Kind" as Kind {
  PAGE
  ANCHOR
  ATTACHMENT
  EXTERNAL
  UNRESOLVED
}

class "Transformer.Result" as Result {
  -content: String
  -attachments: List<Attachment>
  +add(attachment: Attachment): void
}

class Page {
  -title: String
  -source: Path
  -parent: Page
  -children: List<Page>
  +Page(title, source, parent)
  +equals(obj): boolean
  +hashCode(): int
  +toString(): String
}

class Attachment {
  -fileName: String
  -source: Path
}

Publisher --> Configuration: uses
Publisher ..> Parser: resolves and creates\nfrom parserClass
Publisher --> ConfluenceClient: creates
Publisher --> LinkResolver: builds from all mappers
Configuration --> Mapper: contains

ConfluenceClient --> Configuration: uses
ConfluenceClient --> Parser: uses
ConfluenceClient --> Transformer: uses
ConfluenceClient --> Page: processes
ConfluenceClient --> Attachment: processes

Parser <|.. AntoraParser: implements
AntoraParser --> Page: creates
AntoraParser --> Configuration: uses

Transformer <|.. ConfluenceTransformer: implements
Transformer --> Result: returns
ConfluenceTransformer --> Result: returns
ConfluenceTransformer --> LinkResolver: resolves hrefs

LinkResolver --> MapperPages: indexes
LinkResolver --> Target: returns
Target --> Kind: has

Result --> Attachment: contains

Page --> Page: parent-children
Page --> Attachment: may contain

@enduml
